Upgrade Jakarta EE (#164)